reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__epistemics__projection.rs_line_1541_col_5.log

*** crates/tracewake-core/src/epistemics/projection.rs:1541:5: replace debug_belief_entry -> DebugBeliefEntry with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/epistemics/projection.rs
+++ replace debug_belief_entry -> DebugBeliefEntry with Default::default()
@@ -1533,34 +1533,17 @@
 fn contradiction_id_set_key(ids: &std::collections::BTreeSet<ContradictionId>) -> String {
     ids.iter()
         .map(|id| id.as_str())
         .collect::<Vec<_>>()
         .join(",")
 }
 
 fn debug_belief_entry(belief: &Belief) -> DebugBeliefEntry {
-    DebugBeliefEntry {
-        belief_id: belief.belief_id().as_str().to_string(),
-        proposition: belief.proposition().render(),
-        stance: belief.stance().stable_id().to_string(),
-        confidence: belief.confidence().serialize_canonical(),
-        source: source_summary(belief.source()),
-        stale_after_tick: belief.stale_after_tick().map(|tick| tick.value()),
-        observation_ids: belief
-            .observation_ids()
-            .iter()
-            .map(|id| id.as_str().to_string())
-            .collect(),
-        contradiction_ids: belief
-            .contradiction_ids()
-            .iter()
-            .map(|id| id.as_str().to_string())
-            .collect(),
-    }
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 fn debug_observation_entry(observation: &Observation) -> DebugObservationEntry {
     DebugObservationEntry {
         observation_id: observation.observation_id().as_str().to_string(),
         observer_actor_id: observation.observer_actor_id().clone(),
         channel: observation.channel().stable_id().to_string(),
         confidence: observation.confidence().serialize_canonical(),


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/epistemics/projection.rs` has changed (1781909722.155923166s, 6s after last build at 1781909716.799923181s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `DebugBeliefEntry: Default` is not satisfied
    --> crates/tracewake-core/src/epistemics/projection.rs:1541:5
     |
1541 |     Default::default() /* ~ changed by cargo-mutants ~ */
     |     ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `DebugBeliefEntry`
     |
help: consider annotating `DebugBeliefEntry` with `#[derive(Default)]`
    -->  crates/tracewake-core/src/view_models.rs:718:1
     |
 718 + #[derive(Default)]
 719 | pub struct DebugBeliefEntry {
     |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `view_models::DebugBeliefEntry: Default` is not satisfied
    --> crates/tracewake-core/src/epistemics/projection.rs:1541:5
     |
1541 |     Default::default() /* ~ changed by cargo-mutants ~ */
     |     ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `view_models::DebugBeliefEntry`
     |
help: consider annotating `view_models::DebugBeliefEntry` with `#[derive(Default)]`
    -->  crates/tracewake-core/src/view_models.rs:718:1
     |
 718 + #[derive(Default)]
 719 | pub struct DebugBeliefEntry {
     |

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
